--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,25 @@
-.social > div {
-    display: inline-block;
+body > div, h1 {
+    width: 1200px;
+    margin: 0 auto;
 }
 
+.social {
+    display: flex;
+}
+
+
 .social-button {
-    padding: 10px 0;
+    width: 240px;
+    border: 1px solid;
+    margin: 30px 15px;
+    text-align: center;
+}
+
+.social-button > div {
+    padding: 20px 0;
+}
+.social-info {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
 }
