--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,7 +7,6 @@ body > div, h1 {
     display: flex;
 }
 
-
 .social-button {
     width: 240px;
     border: 1px solid;
@@ -21,5 +20,20 @@ body > div, h1 {
 .social-info {
     width: 100%;
     margin: 0 auto;
+    height: 100%;
+}
+
+.info-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.info-header > h2, p {
+    margin: 30px 10px;
+}
+
+.info-description {
     text-align: center;
 }
